MB-19424: Add more detailed logging of bucket deletion

It has been shown that during bucket deletion signficant time can be
spent in the destructor of ep-engine.

This patch provides additional logging to help identify where the time
is being spent in the destructor.

Change-Id: Ic1b09a0d9d31ff1e2a3e4ef013adb2ff5d90d898
Reviewed-on: http://review.couchbase.org/70296
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>